# fair-do-designer

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CITATION.cff  README.md  codemeta.json  dev.sh  docker-compose.yml  eslint.config.mjs  get-deps.sh  include-jsonaccess-libs-public.sh  json-picker-stencil-0.0.1.tgz  json-picker-stencil-0.0.2.tgz  kit-data-manager-json-picker-0.0.2.tgz  kit-data-manager-json-picker-0.0.3.tgz  kit-data-manager-json-picker-0.0.4.tgz  kit-data-manager-json-picker-0.0.5.tgz  kit-data-manager-json-picker-react-0.0.2.tgz  kit-data-manager-json-picker-react-0.0.3.tgz  kit-data-manager-json-picker-react-0.0.4.tgz  kit-data-manager-json-picker-react-0.0.5.tgz  kit-data-manager-pid-component-0.3.0.tgz  mdx-components.ts  next.config.ts  package-lock.json  package.json  renovate.json  somesy.toml  tsconfig.js-boilerplate.json  tsconfig.json  tsconfig.webworker.json  webpack.config.js  webpack.config.webworker.js
app/: globals.css  layout.tsx  page.tsx
components/: AlertManager.tsx  ErrorDisplay.tsx  Header.tsx  InputPane.tsx  OutputPane.tsx  PIDRecordDisplay.tsx  RemoteDesignImport.tsx  UnifierContext.tsx  Workspace.tsx  error.tsx
content/: _meta.ts  connecting-fair-dos.mdx  data-queries.mdx  getting-started.mdx  index.mdx
doc/: information_flow.md
docker/: Dockerfile
examples/: Minimal example for testing.json  (+1 more)
lib/generators/python/: conditionals.py  example_generated-minimal.py  execute.py  main.py  pyproject.toml  test.generated-example.full.py  test.generated-example.user-code.py  test.sanity.user-code.py  test_design.py
(+145 files in other folders)
